# aura-server

./: .gitignore  Dockerfile  README.md  docker-compose-local.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: build_dev.yml  deploy_dev.yml  test.yml
api/: main.py  main_test.py  openapi_tags.py  prod.py  query  sample.env
api/auth/: firebase.py
api/db/: database.py  db_base_model.py
api/db/models/: discussion_comments.py  discussions.py  users.py
api/fixtures/: news_fixtures.py
api/models/: comments_model.py  discussions.py  discussions_model.py  meetups_model.py  news_model.py
api/routers/: community.py  discussions.py  news.py
api/routers/discussions/: delete.py  delete_test.py  get.py  get_test.py  patch.py  patch_test.py  post.py  post_test.py
api/routers/discussions/comments/: delete.py  delete_test.py  post.py  post_test.py
api/routers/login/: post.py
api/routers/meetups/: delete.py  delete_test.py  get.py  get_test.py  patch.py  patch_test.py  post.py  post_test.py
api/routers/meetups/comments/: delete.py  delete_test.py  post.py  post_test.py
api/routers/news/: get.py  get_test.py
api/routers/proxy/: amenities.py  buses.py  market_closure.py  taxis.py
api/routes/: buses.py
api/sample/: sample_comment_data.py  sample_disc_data.py  sample_meetup_data.py  sample_news_data.py
api/tests/routers/: discussions_test.py  news_test.py  news_test_old.py  test_news.py
