[tool.poetry]
name = "api"
version = "0.1.0"
description = "REST API Server for the aura app"
authors = ["Dyllon <dyllon001@e.ntu.edu.sg>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.10"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
requests = "^2.27.1"
fastapi = "^0.75.1"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
autopep8 = "^1.6.0"
pytest-watch = "^4.2.0"

[tool.poetry.scripts]
dev = "api.main:start_dev"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
